syntax = "proto3";

option go_package = "github.com/peng225/internal/rpc";

package starfish;

service Raft {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesReply) {}
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteReply) {}
}

message AppendEntriesRequest {
  int64 term = 1;
  int32 leaderID = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesReply {
  int64 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int64 term = 1;
  int32 candidateID = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteReply {
  int64 term = 1;
  bool voteGranted = 2;
}

message LogEntry {
    int64 term = 1;
    int32 lockHolderID = 2;
}
